--- a/LEPR_Analysis.Rmd
+++ b/LEPR_Analysis.Rmd
@@ -30,7 +30,7 @@ TitaniteCations <- TitaniteExpts %>%
 
 ```{r}
 # Calculate cation fractions
-CationFractions <- select(TitaniteCations, Expt, TC, TiO2, Si:eCa, CationSum)
+CationFractions <- TitaniteCations
 f <- match("Si", names(CationFractions))
 l <- match("eCa", names(CationFractions))
 for (i in f:l) {
@@ -54,12 +54,131 @@ CationFractions <- CationFractions %>%
 
 
 ```{r}
-# Calculate TiO2 saturation concentration
+# Plot TiO2Sat on x-axis and TiO2 on y-axis.
+# Ideally all points should fall on a 1:1 line
+ggplot(CationFractions, aes(x=TiO2Sat, y=TiO2, color=C)) +
+  geom_point() +
+  geom_abline(slope=1, intercept=0) +
+ # scale_color_gradient(low = "black", high = "white")
+  scale_color_gradientn(colours = rainbow(5))
+
+```
+
+```{r}
+# Model works for low values of C. Need to fit a model to all of the data. Add LEPR data to our and fit a new model. 
+AllExpts <- read_csv("AllExpts.csv")
+
+```
+```{r}
+TitaniteCations <- AllExpts %>%
+  mutate(
+    Si = SiO2/60.0848,
+    Al = 2*Al2O3/101.961,
+    Na = 2*Na2O/61.979,
+    K = 2*K2O/94.194,
+    Ca = CaO/56.0794,
+    Fe = FeO/71.8464,
+    Mg = MgO/40.3044,
+    Ti = TiO2/79.8988,
+    eCa = (CaO/56.0794 - Al2O3/101.961 + K2O/94.194 + Na2O/61.979),
+    CationSum = (Si + Al + Na + K + Ca + Fe + Mg + Ti)
+     )
+```
+
+```{r}
+# Calculate cation fractions
+CationFractions <- TitaniteCations
+f <- match("Si", names(CationFractions))
+l <- match("eCa", names(CationFractions))
+for (i in f:l) {
+  CationFractions[(i)] = CationFractions[(i)]/CationFractions$CationSum
+}
+
+```
+
+```{r}
+# Calculate melt composition parameters & TiO2 saturation concentration
 CationFractions <- CationFractions %>%
   mutate(
-    TiO2sat <- (0.79*C - 7993*InvTK + 7.89)
+    M = (Na + K + 2*Ca)/(Si*Al),
+    FM = (Na + K + 2*(Ca + Fe + Mg))/(Si*Al),
+    C = (10*eCa)/(Si*Al),
+    InvTK = 1/(TC+273.15)
+    )
+```
+
+```{r}
+# Scatterplot matrices
+library(car)
+scatterplotMatrix(~ Ti + Ca + Al + InvTK + M + FM + C, data = CationFractions, groups = CationFractions$Source, smooth = FALSE)
+dev.copy(png,"ScatterPlotMatrixAllExpts.png")
+dev.off()   
+# Correlation matrix
+CorrTest <- select(CationFractions, TiO2, M:InvTK)
+cor(CorrTest)
+# LEPR compositions show bimodal distribution. 
+# LEPR data show different dependence on C than our data. 
+```
+
+
+```{r}
+fit <- lm(TiO2 ~ C + InvTK, data = CationFractions)
+summary(fit)
+plot(fit)
+```
+
+
+```{r}
+RegModel <- select(CationFractions, Source, Expt, TiO2, InvTK, C)
+RegModel <- slice(RegModel, -(23:25))
+fit <- lm(TiO2 ~ C + InvTK, data = RegModel)
+summary(fit)
+plot(fit)
+```
+```{r}
+RegModel <- slice(RegModel, -(23))
+RegModel <- slice(RegModel, -(52))
+fit <- lm(TiO2 ~ C + InvTK, data = RegModel)
+summary(fit)
+plot(fit)
+```
+```{r}
+RegModel <- slice(RegModel, -(51))
+fit <- lm(TiO2 ~ C + InvTK, data = RegModel)
+summary(fit)
+plot(fit)
+```
+
+
+```{r}
+RegModel <- slice(RegModel, -(49))
+fit <- lm(TiO2 ~ C + InvTK, data = RegModel)
+summary(fit)
+plot(fit)
+```
+
+
+```{r}
+# Calculate new model TiO2 concentrations and errors
+CationFractions <- CationFractions %>%
+  mutate(
+   ModelTiO2 = (0.1994*C - 8117*InvTK + 8.105),
+   ModelTiO2SD = ModelTiO2*sqrt((0.00892/0.1994)^2 + (1367/8117)^2),
+   lower = ModelTiO2 - ModelTiO2SD,
+   upper = ModelTiO2 + ModelTiO2SD
   )
-# Plot TiO2sat on x-axis and TiO2 on y-axis.
-# Ideally all points should fall on a 1:1 line
-qplot(CationFractions$TiO2sat, CationFractions$TiO2)
+```
+
+```{r}
+ggplot(CationFractions, aes(x=TiO2, y=ModelTiO2, ymin=lower, ymax=upper, color=C)) +
+  geom_point() +
+  geom_abline(slope=1, intercept=0) +
+  scale_color_gradientn(colours = rainbow(5))
+```
+
+
+```{r}
+# Create model output table
+TiO2AllExptsModelTable <- select(CationFractions, Source, Expt, eCa, C, InvTK, TiO2, ModelTiO2, ModelTiO2SD)
+write.csv(TiO2AllExptsModelTable, file = "TiO2AllExptsModelTable.csv")
 ```
